# SpectrumTag

./: .gitignore  CMakeLists.txt  PitchShiftEngine.cpp  PitchShiftEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Pupon_installer.iss  README.md  SpectrumTag_installer.iss  build_installer.bat  build_macos_installer.sh  delete_me.txt
grid_plugin/: CMakeLists.txt  grid_plugin.h
presents/: +12st.puponpreset  +24st.puponpreset  -12st.puponpreset  -24st.puponpreset  5bands(narrow).puponpreset  5bands(wide).puponpreset  LHRL.puponpreset  LLRH.puponpreset  move to high.puponpreset  move to low.puponpreset
